@@ -186,7 +186,7 @@ else {
 							$unique=FALSE;
 							while ($unique==FALSE) {
 								$suffix=randomPassword(16) ;
-								$imageLocation="uploads/" . date("Y", $time) . "/" . date("m", $time) . "/" . preg_replace("/[^a-zA-Z0-9\s]/", "", $id) . "_$suffix" . strrchr($_FILES["imageFile"]["name"], ".") ;
+								$imageLocation="uploads/" . date("Y", $time) . "/" . date("m", $time) . "/" . preg_replace("/[^a-zA-Z0-9]/", "", $id) . "_$suffix" . strrchr($_FILES["imageFile"]["name"], ".") ;
 								if (!(file_exists($path . "/" . $imageLocation))) {
 									$unique=TRUE ;
 								}
@@ -213,7 +213,7 @@ else {
 							$unique=FALSE;
 							while ($unique==FALSE) {
 								$suffix=randomPassword(16) ;
-								$imageLocation_100="uploads/" . date("Y", $time) . "/" . date("m", $time) . "/" . preg_replace("/[^a-zA-Z0-9\s]/", "", $id) . "_100_$suffix" . strrchr($_FILES["thumbnailFile"]["name"], ".") ;
+								$imageLocation_100="uploads/" . date("Y", $time) . "/" . date("m", $time) . "/" . preg_replace("/[^a-zA-Z0-9]/", "", $id) . "_100_$suffix" . strrchr($_FILES["thumbnailFile"]["name"], ".") ;
 								if (!(file_exists($path . "/" . $imageLocation_100))) {
 									$unique=TRUE ;
 								}
